added tailwind CDM

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/dist/output.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Music Lyric Player</title>
 </head>
 <body>
     <header>
-        <h1>Music Lyric Player</h1>
+        <h1 class="text-3xl font-bold underline">Music Lyric Player</h1>
     </header>
     <main>
         <div id="main-text">
@@ -19,7 +21,7 @@
         </div> 
     </main>
     <footer>
-
+        <a href="https://open.spotify.com/">Link to spotify!</a>
     </footer>
 </body>
 </html>
