--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
     <title>Music Lyric Player</title>
 </head>
+
 <body>
-    <header>
-        <h1 class="text-3xl font-bold underline">Music Lyric Player</h1>
-    </header>
-    <main>
-        <div id="main-text">
-            <p>Welcome to the music lyric player. To listen to your favourite songs, just enter the track name in the search bar below!</p>
-        </div>
-        <div id="search-bar">
-            <input type="search" placeholder="Search track here...">
-            <button>Search</button>
-        </div> 
-    </main>
-    <footer>
-        <a href="https://open.spotify.com/">Link to spotify!</a>
-    </footer>
+    <!-- <div class="box w-full h-screen text-center flex flex-col justify-center"> -->
+    <div class="box w-full text-center absolute top-1/4">
+        <header>
+            <h1 class="text-9xl 
+            italic 
+            tracking-wide 
+            font-bold 
+            text-transparent bg-clip-text bg-gradient-to-r from-pink-500 from-35% to-orange-500 to-65% 
+            py-5">Lyrynx</h1>
+        </header>
+        <main>
+            <div id="main-text mt-8" class=" mt-12">
+                <p>Welcome to Lyrynx! Start listening and singing to your favourite songs <br>by entering the track name in the search bar below!</p>
+            </div>
+            <div id="search-bar" class="mt-6">
+                <input type="search" class="rounded-full w-1/3 py-2.5 indent-5 text-black focus:outline-gray-300"
+                    placeholder="Search track here">
+                <button class="rounded-full bg-green-600 py-2.5 px-6 hover:bg-green-700 transition ease-in-out delay-10">Search</button>
+            </div>
+        </main>
+        <footer class="mt-12" >
+            <a class="font-bold underline underline-offset-2 hover:decoration-2" href="https://open.spotify.com/">Link your Spotify account here!</a>
+        </footer>
+    </div>
 </body>
+
 </html>
