Extract lyric from embed.js fucntion

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Music Lyric Player</title>
 </head>
 <body>
@@ -12,6 +13,15 @@
     <main>
         <div id="main-text">
             <p>Welcome to the music lyric player. To listen to your favourite songs, just enter the track name in the search bar below!</p>
+            
+        </div>
+          
+        <section >
+
+        </section>
+        <div id="text" id='rg_embed_link_378195'>
+            <div id='rg_embed_link_378195'> </div>
+            </script>
         </div>
         <div id="search-bar">
             <input type="search" placeholder="Search track here...">
@@ -21,5 +31,7 @@
     <footer>
 
     </footer>
+    <script src="genius.js"></script>
+    <script id="src" crossorigin src=''></script>
 </body>
 </html>
