--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <div id="main-text mt-8" class=" mt-12">
                 <p>Welcome to Lyrynx! Start listening and singing to your favourite songs <br>by entering the track name in the search bar below!</p>
             </div>
-            <div id="search-bar" class="mt-6">
+            <div id="search-bar" class="mt-6 hidden">
                 <input type="search" class="rounded-full w-1/3 py-2.5 indent-5 text-black focus:outline-gray-300"
                     placeholder="Search track here">
                 <button class="rounded-full bg-green-600 py-2.5 px-6 hover:bg-green-700 transition ease-in-out delay-10">Search</button>
             </div>
         </main>
-        <footer class="mt-12" >
-            <a class="font-bold underline underline-offset-2 hover:decoration-2" href="https://open.spotify.com/">Link your Spotify account here!</a>
+        <footer class="mt-12">
+                <button id="spotify-btn" class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
         </footer>
     </div>
 </body>
