--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <script defer src="./js/spotify.js"></script>
+    <script defer src="./js/app.js"></script>
     <title>Music Lyric Player</title>
 </head>
 
 <body>
-    <div hidden class="box w-full text-center absolute top-1/4">
+    <!-- Landing Page -->
+    <div id="landing-page" class="box w-full text-center absolute top-1/4">
         <header>
             <h1 class="text-9xl 
             italic 
@@ -21,11 +24,11 @@
             py-5">Lyrynx</h1>
         </header>
         <main>
-            <div id="main-text mt-8" class=" mt-12">
+            <div id="search-prompt" id="main-text mt-8" class=" mt-12">
                 <p>Welcome to Lyrynx! Start listening and singing to your favourite songs <br>by entering the track name
                     in the search bar below!</p>
             </div>
-            <div id="search-bar" class="mt-6 hidden">
+            <div hidden id="search-bar" class="mt-6">
                 <input type="search" class="rounded-full w-1/3 py-2.5 indent-5 text-black focus:outline-gray-300"
                     placeholder="Search track here...">
                 <button type="submit"
@@ -33,10 +36,11 @@
             </div>
         </main>
         <footer class="mt-12">
-                <button id="spotify-btn" class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
+            <button hidden id="spotify-btn" class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
         </footer>
     </div>
-    <div class="main-page">
+    <!-- Main page -->
+    <div hidden id="main-page" class="main-page">
         <nav class="flex justify-around py-5">
             <h1 class="text-5xl
             italic 
