Moved spotify OAuth button out of footer

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
                 <button type="submit"
                     class="rounded-full bg-green-600 py-2.5 px-6 hover:bg-green-700 transition ease-in-out delay-10">Search</button>
             </div>
+            <div hidden id="spotify-btn" class="mt-12">
+                <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
+            </div>
         </main>
-        <footer class="mt-12">
-            <button hidden id="spotify-btn" class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
+        <footer>
         </footer>
     </div>
     <!-- Main page -->
