Changed search div to a form

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <p>Welcome to Lyrynx! Start listening and singing to your favourite songs <br>by entering the track name
                     in the search bar below!</p>
             </div>
-            <div hidden id="search-bar" class="mt-6">
+            <form hidden id="search-bar" class="mt-6">
                 <input type="search" class="rounded-full w-1/3 py-2.5 indent-5 text-black focus:outline-gray-300"
                     placeholder="Search track here...">
                 <button type="submit"
                     class="rounded-full bg-green-600 py-2.5 px-6 hover:bg-green-700 transition ease-in-out delay-10">Search</button>
-            </div>
+            </form>
             <div hidden id="spotify-btn" class="mt-12">
                 <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
             </div>
