Updated document title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="./js/spotify.js"></script>
     <script defer src="./js/app.js"></script>
-    <title>Music Lyric Player</title>
+    <title>Lyrynx</title>
 </head>
 
 <body>
