--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div hidden id="spotify-btn" class="mt-12">
                 <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
             </div>
+            <div id="search-results"></div>
         </main>
         <footer>
         </footer>
@@ -57,10 +58,14 @@
 
         <div class="artist-banner flex justify-center pb-5 mt-5 bg-gradient-to-t from-slate-600">
 
-            <section id="album-art" class="box-content h-52 w-52 p-4 bg-green-500 rounded">Album art goes here.</section>
+            <section class="box-content h-52 w-52 p-0 bg-green-500 rounded">
+                <img class="w-full h-full p-0" id="album-art" src="" alt="album art">
+            </section>
 
             <section class="track-info ml-10">
-                <h3 id="track-title" class="text-xl">Track Title</h3>
+                <h3 id="track-title" class="text-xl font-black">Track Title</h3>
+                <br>
+                <p id="artist-name" class="text-l font-bold">Artist Name</p>
                 <br>
                 <p id="album-name">Album Name</p>
                 <br>
@@ -72,6 +77,7 @@
         <div class="lyric-box mt-20">
             <section id="lyrics" class="text-center relative">Lyrics goes here.</section>
         </div>
+        <div id="player-container"><div id="spotify-player"></div></div>
     </div>
     <script src="js/player.js"></script>
 </body>
