Code and functions working

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <section >
 
         </section>
-        <div id="text" id='rg_embed_link_378195'>
-            <div id='rg_embed_link_378195'> </div>
-            </script>
+        <div id="text" >
+            <div id='rg_embed_link_200930'></div>
         </div>
         <div id="search-bar">
             <input type="search" placeholder="Search track here...">
@@ -32,6 +31,7 @@
 
     </footer>
     <script src="genius.js"></script>
-    <script id="src" crossorigin src=''></script>
+    <script src="https://genius.codes"></script>
+       
 </body>
 </html>
