--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p>Welcome to Lyrynx! Start listening and singing to your favourite songs <br>by entering the track name
                     in the search bar below!</p>
             </div>
-            <div id="search-bar" class="mt-6">
+            <form id="search-bar" class="mt-6">
                 <input type="text" class="rounded-full w-1/3 py-2.5 indent-5 text-black focus:outline-gray-300"
                     placeholder="Search track here...">
                 <button type="submit"
@@ -60,8 +60,8 @@
             <div hidden id="spotify-btn" class="mt-12">
                 <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
             </div>
-            <div id="search-results"></div>
-        </main>
+            <div id="track-search-results"></div>
+        </section>
     </div>
     <!-- Main page -->
     <div hidden id="main-page">
@@ -80,7 +80,8 @@
         <div class="artist-banner flex justify-center pb-5 mt-5 bg-gradient-to-t from-slate-600">
 
 
-            <section id="album-art" class="box-content h-52 w-52 p-4 bg-green-500 rounded">Album art goes here.
+            <section id="album-art" class="box-content h-52 w-52 p-0 bg-green-500 rounded">
+                <img class="w-full h-full p-0"src=""/ alt="alcum art">
             </section>
 
             <section class="track-info ml-10">
