--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script defer src="./js/spotify.js"></script>
+    <script defer src="./js/genius.js"></script>
     <script defer src="./js/app.js"></script>
     <title>Lyrynx</title>
 </head>
