--- a/index.html
+++ b/index.html
@@ -60,7 +60,31 @@
             <div hidden id="spotify-btn" class="mt-12">
                 <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
             </div>
-            <div id="track-search-results"></div>
+            
+            <div id="search-results-template" class="m-2 
+            flex 
+            border-solid
+            my-4  
+            border-2
+            p-4 
+            justify-start
+            rounded
+            hover:bg-stone-700
+            active:bg-stone-800
+            max-w-lg">
+
+                <section class="box-content h-16 w-16 p-0 bg-green-500">
+                    <img id="template-art" class="w-full h-full p-0">
+                </section>
+
+                <section class="ml-5">
+                    <p id="template-title" class="font-bold">Title</p>
+                    
+                    <p id="template-artist" class="italic text-stone-400">Artist</p>
+                </section>
+
+            </div>
+
         </section>
     </div>
     <!-- Main page -->
