Made search work with new template element

--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
             <div hidden id="spotify-btn" class="mt-12">
                 <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
             </div>
-            
-            <div id="search-results-template" class="m-2 
-            flex 
-            border-solid
-            my-4  
-            border-2
-            p-4 
-            justify-start
-            rounded
-            hover:bg-stone-700
-            active:bg-stone-800
-            max-w-lg">
+            <div id="search-results">
+                <div id="search-results-template" class="m-2 
+                    flex 
+                    border-solid
+                    my-4  
+                    border-2
+                    p-4 
+                    justify-start
+                    rounded
+                    hover:bg-stone-700
+                    active:bg-stone-800
+                    max-w-lg">
 
                 <section class="box-content h-16 w-16 p-0 bg-green-500">
                     <img id="template-art" class="w-full h-full p-0">
@@ -84,6 +84,8 @@
                 </section>
 
             </div>
+            </div>
+            
 
         </section>
     </div>
