Changed css id styling into class styling

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
             <div hidden id="spotify-btn" class="mt-12">
                 <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
             </div>
-            <div id="search-results">
-                <div id="search-results-template" class="m-2 
+            <div id="search-results" class="">
+                <div id="search-results-template" class="template-styling
+                    m-2 
                     flex 
                     border-solid
                     my-4  
