Fixed the styling

--- a/index.html
+++ b/index.html
@@ -61,30 +61,26 @@
                 <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
             </div>
             <div id="search-results" class="">
-                <div id="search-results-template" class="template-styling
-                    m-2 
-                    flex 
+                <div hidden id="search-results-template" class="template-styling
+                    flex
                     border-solid
                     my-4  
                     border-2
                     p-4 
                     justify-start
                     rounded
+                    text-left
                     hover:bg-stone-700
                     active:bg-stone-800
                     max-w-lg">
-
-                <section class="box-content h-16 w-16 p-0 bg-green-500">
-                    <img id="template-art" class="w-full h-full p-0">
-                </section>
-
-                <section class="ml-5">
-                    <p id="template-title" class="font-bold">Title</p>
-                    
-                    <p id="template-artist" class="italic text-stone-400">Artist</p>
-                </section>
-
-            </div>
+                    <section class="box-content h-16 w-16 p-0 bg-green-500">
+                        <img id="template-art" class="w-full h-full p-0">
+                    </section>
+                    <section class="ml-5">
+                        <p id="template-title" class="font-bold">Title</p>
+                        <p id="template-artist" class="italic text-stone-400">Artist</p>
+                    </section>
+                </div>
             </div>
             
 
