--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="./js/spotify.js"></script>
     <script defer src="./js/genius.js"></script>
+    <script defer src="./js/player.js"></script>
     <script defer src="./js/app.js"></script>
     <title>Lyrynx</title>
 </head>
@@ -123,7 +124,6 @@
         </div>
         <div id="player-container"><div id="spotify-player"></div></div>
     </div>
-    <script src="js/player.js"></script>
 </body>
 
 </html>
