Made page title text redirect back to landing page

--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
     <!-- Main page -->
     <div hidden id="main-page">
         <nav class="flex justify-around py-5">
-            <h1 class="text-5xl
+            <h1 id="title-link" class="text-5xl
             italic 
             tracking-wide 
             font-bold 
+            cursor-pointer 
             text-transparent bg-clip-text bg-gradient-to-r from-pink-500 from-30% to-orange-500 to-70% p-3">Lyrynx
             </h1>
             <input type="text"
