Player reload upon page navigation

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="lyric-box mt-20">
             <section id="lyrics" class="text-center relative">Lyrics goes here.</section>
         </div>
-        <div id="player-container"><div id="spotify-player"></div></div>
+        <div id="player-container"></div>
     </div>
 </body>
 
