--- a/index.html
+++ b/index.html
@@ -63,29 +63,7 @@
                 <button class="rounded-full px-10 bg-green-500 hover:bg-green-600 active:bg-green-700"><img src="./images/spotify-logo.png" alt="spotify logo"><p>Link Spotify Account Here</p></button>
             </div>
             <div id="search-results" class="">
-                <div hidden id="search-results-template" class="template-styling
-                    flex
-                    border-solid
-                    my-4  
-                    border-2
-                    p-4 
-                    justify-start
-                    rounded
-                    text-left
-                    hover:bg-stone-700
-                    active:bg-stone-800
-                    max-w-lg">
-                    <section class="box-content h-16 w-16 p-0 bg-green-500">
-                        <img id="template-art" class="w-full h-full p-0">
-                    </section>
-                    <section class="ml-5">
-                        <p id="template-title" class="font-bold">Title</p>
-                        <p id="template-artist" class="italic text-stone-400">Artist</p>
-                    </section>
-                </div>
             </div>
-            
-
         </section>
     </div>
     <!-- Main page -->
@@ -121,10 +99,35 @@
             </section>
         </div>
         <div class="lyric-box mt-20">
-            <section id="lyrics" class="text-center relative">Lyrics goes here.</section>
+            <section id="lyrics" class="text-center relative">
+
+            </section>
         </div>
         <div id="player-container"></div>
     </div>
+    <!-- Template Elements -->
+    <div hidden id="search-results-template" class="template-styling
+            flex
+            border-solid
+            my-4  
+            border-2
+            p-4 
+            justify-start
+            rounded
+            text-left
+            hover:bg-stone-700
+            active:bg-stone-800
+            max-w-lg">
+        <section class="box-content h-16 w-16 p-0 bg-green-500">
+            <img id="template-art" class="w-full h-full p-0">
+        </section>
+        <section class="ml-5">
+            <p id="template-title" class="font-bold">Title</p>
+            <p id="template-artist" class="italic text-stone-400">Artist</p>
+        </section>
+    </div>
+    <div hidden id="spinner" class="h-14 h-14 p-4 flex justify-around">
+        <span class="loader"></span>
+    </div>
 </body>
-
 </html>
