Added styling to lyrics

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <p id="song-length">Song Duration</p>
             </section>
         </div>
-        <div class="lyric-box mt-20">
-            <section id="lyrics" class="text-center relative">Lyrics goes here.</section>
+        <div class="lyric-box mt-20 ">
+            <section id="lyrics" class="relative inline text-left text-slate-300">Lyrics goes here.</section>
         </div>
-        <div id="player-container"><div id="spotify-player"></div></div>
+        <div id="player-container"><div id="spotify-player"></div>
     </div>
     <script src="js/player.js"></script>
 </body>
