--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </section>
         </div>
         <div class="lyric-box flex justify-center mt-12 ">
-            <section id="lyrics" class="relative inline text-left text-slate-300">Lyrics goes here.</section>
+            <section id="lyrics" class="relative inline text-left text-slate-300 bg-zinc-800 p-4">Lyrics goes here.</section>
         </div>
         <div id="player-container"></div>
     </div>
