small styling changes

--- a/index.html
+++ b/index.html
@@ -88,13 +88,11 @@
                 <img class="w-full h-full p-0"src=""/ alt="alcum art">
             </section>
 
-            <section class="track-info ml-10">
-                <h3 id="track-title" class="text-4xl">Track Title</h3>
-                <br>
+            <section class="track-info ml-10 leading-10">
+                <h3 id="track-title" class="text-4xl font-bold mb-3">Track Title</h3>
+                <p id="artist-name">Artist Name</p>
                 <p id="album-name">Album Name</p>
-                <br>
                 <p id="release-year">Release Year</p>
-                <br>
                 <p id="song-length">Song Duration</p>
             </section>
         </div>
