--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <img class="w-full h-full p-0"src=""/ alt="alcum art">
             </section>
 
-            <section class="track-info ml-10">
+            <section class="track-info">
                 <h3 id="track-title" class="text-4xl">Track Title</h3>
                 <br>
                 <p id="album-name">Album Name</p>
