Added padding to album art

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="artist-banner flex justify-center pb-5 mt-5 bg-gradient-to-t from-slate-600">
 
 
-            <section id="album-art" class="box-content h-52 w-52 p-0 bg-green-500 rounded">
+            <section id="album-art" class="box-content h-52 w-52 pl-5">
                 <img class="w-full h-full p-0"src=""/ alt="alcum art">
             </section>
 
