Fixed some issues introduced in PR52

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="box w-full text-center absolute top-1/4">
 
         <!-- Initial, Linking Page Here -->
-        <section id="linking-page">
+        <section hidden id="linking-page">
             <div>
                 <h1 class="text-9xl 
                 italic 
@@ -88,9 +88,9 @@
                 <img class="w-full h-full p-0"src=""/ alt="alcum art">
             </section>
 
-            <section class="track-info">
-                <h3 id="track-title" class="text-4xl">Track Title</h3>
-                <br>
+            <section class="track-info ml-10 leading-10">
+                <h3 id="track-title" class="text-4xl font-bold mb-3">Track Title</h3>
+                <p id="artist-name">Artist Name</p>
                 <p id="album-name">Album Name</p>
                 <p id="release-year">Release Year</p>
                 <p id="song-length">Song Duration</p>
