Added swap() function to test relocating the search bar

--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
             cursor-pointer 
             text-transparent bg-clip-text bg-gradient-to-r from-pink-500 from-30% to-orange-500 to-70% p-3">Lyrynx
             </h1>
-            <input type="text"
-                class="self-center rounded-full h-8 w-1/6 py-2.5 indent-5 text-black focus:outline-gray-300"
-                placeholder="Search track here...">
+            <div id="main-search" class="h-8 w-1/6 py-2.5 bg-yellow-600"></div>
         </nav>
 
         <div class="artist-banner flex justify-center pb-5 mt-5 bg-gradient-to-t from-slate-600">
