Added auto margin on landing page

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <p>Welcome to Lyrynx! Start listening and singing to your favourite songs <br>by entering the track name
                     in the search bar below!</p>
             </div>
-            <div id="search-container" class="flex justify-center">
-                <form id="search-bar" class="flex w-1/4">
+            <div id="search-container" class="flex w-1/6 m-auto justify-center">
+                <form id="search-bar" class="flex w-full">
                     <input type="text" class="flex-auto w-5/6 rounded-full py-2.5 indent-5 text-black focus:outline-gray-300"
                     placeholder="Search track here...">
                     <button type="submit"
