Fixed spacing on search bar; made search bar work on both pages; removed redundant code; renamed IDs for improved clarity

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <p>Welcome to Lyrynx! Start listening and singing to your favourite songs <br>by entering the track name
                     in the search bar below!</p>
             </div>
-            <div id="search-container" class="flex w-1/5 m-auto justify-center">
+            <div id="landing-page-search" style="width: 600px;" class="flex m-auto justify-center">
                 <form id="search-bar" class="flex w-full">
                     <input type="text"
-                        class="flex-auto w-5/6 rounded-full py-2.5 indent-5 text-black focus:outline-gray-300"
+                        class="flex-auto mr-2 w-5/6 rounded-full py-2.5 indent-5 text-black focus:outline-gray-300"
                         placeholder="Search track here...">
                     <button type="submit"
                         class="rounded-full bg-green-600 py-2.5 px-6 hover:bg-green-700 transition ease-in-out delay-10">Search</button>
@@ -76,7 +76,7 @@
             cursor-pointer 
             text-transparent bg-clip-text bg-gradient-to-r from-pink-500 from-30% to-orange-500 to-70% p-3">Lyrynx
             </h1>
-            <div id="main-search" class="bg-yellow-600"></div>
+            <div id="main-page-search" style="width: 400px;"></div>
         </nav>
 
         <div class="artist-banner flex justify-center pb-5 mt-5 bg-gradient-to-t from-slate-600">
