Moved inline CSS into style.css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p>Welcome to Lyrynx! Start listening and singing to your favourite songs <br>by entering the track name
                     in the search bar below!</p>
             </div>
-            <div id="landing-page-search" style="width: 600px;" class="flex m-auto justify-center">
+            <div id="landing-page-search" class="flex m-auto justify-center">
                 <form id="search-bar" class="flex w-full">
                     <input type="text"
                         class="flex-auto mr-2 w-5/6 rounded-full py-2.5 indent-5 text-black focus:outline-gray-300"
@@ -76,7 +76,7 @@
             cursor-pointer 
             text-transparent bg-clip-text bg-gradient-to-r from-pink-500 from-30% to-orange-500 to-70% p-3">Lyrynx
             </h1>
-            <div id="main-page-search" style="width: 400px;"></div>
+            <div id="main-page-search"></div>
         </nav>
 
         <div class="artist-banner flex justify-center pb-5 mt-5 bg-gradient-to-t from-slate-600">
