--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
             tracking-wide 
             font-bold 
             cursor-pointer 
-            text-transparent bg-clip-text bg-gradient-to-r from-pink-500 from-30% to-orange-500 to-70% p-3">Lyrynx
+            text-transparent bg-clip-text bg-gradient-to-r from-pink-500 from-30% to-orange-500 to-70% p-3 hidden sm:block">Lyrynx
             </h1>
-            <div id="main-page-search"></div>
+            <div class="mx-2" id="main-page-search"></div>
         </nav>
 
         <div class="artist-banner flex justify-center pb-5 mt-5 bg-gradient-to-t from-slate-600">
 
 
-            <section id="album-art" class="box-content h-52 w-52 pl-5">
+            <section id="album-art" class="box-content h-52 w-52 pl-0 md:pl-5">
                 <img class="w-full h-full p-0" src="" alt="album art">
             </section>
 
-            <section class="track-info ml-10 leading-10">
-                <h3 id="track-title" class="text-4xl font-bold mb-3">Track Title</h3>
+            <section class="track-info ml-0 md:ml-10 md:leading-10 leading-7">
+                <h3 id="track-title" class="text-4xl font-bold md:mb-1 mb-3">Track Title</h3>
                 <p id="artist-name">Artist Name</p>
                 <p id="album-name">Album Name</p>
                 <p id="release-year">Release Year</p>
