Stopped album art being squished when tracks have long titles

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <div class="mx-2" id="main-page-search"></div>
         </nav>
 
-        <div class="artist-banner flex justify-center pb-5 mt-0 sm:mt-5 bg-gradient-to-t from-slate-600 flex-row items-center text-center">
-            <section id="album-art" class="box-content absolute brightness-50 sm:brightness-100 -z-10 sm:z-0 top-0 sm:z-0 sm:relative w-full sm:h-52 sm:w-52">
-                <img class="w-full h-full p-0" src="./images/placeholder-art.png" alt="album art">
+        <div class="artist-banner flex justify-center px-3 pb-5 mt-0 sm:mt-5 bg-gradient-to-t from-slate-600 flex-row items-center text-center">
+            <section id="album-art" class="flex-shrink-0 absolute sm:relative brightness-50 sm:brightness-100 -z-10 sm:z-0 top-0 sm:z-0 w-full sm:h-52 sm:w-52">
+                <img class="w-full h-full sm:h-52 sm:w-52 p-0" src="./images/placeholder-art.png" alt="album art">
             </section>
 
             <section class="track-info ml-0 sm:ml-10 mt-0 sm:mt-3 leading-7 sm:leading-10">
