Added alt tag to album art search images

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             flex border-solid my-4 border-2 p-4 justify-start rounded
             text-left hover:bg-stone-700 active:bg-stone-800 max-w-lg">
         <section class="box-content h-16 w-16 p-0 bg-green-500">
-            <img id="template-art" class="w-full h-full p-0">
+            <img id="template-art" class="w-full h-full p-0" alt="album art">
         </section>
         <section class="ml-5">
             <p id="template-title" class="font-bold">Title</p>
