Made search results navigatable via keyboard

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         <div id="player-container"></div>
     </div>
     <!-- Template Elements -->
-    <div hidden id="search-results-template" class="template-styling
+    <button hidden id="search-results-template" class="template-styling
             flex border-solid my-4 border-2 p-4 justify-start rounded
-            text-left hover:bg-stone-700 active:bg-stone-800 max-w-lg">
+            text-left hover:bg-stone-700 active:bg-stone-800 max-w-lg w-96">
         <section class="box-content h-16 w-16 p-0 bg-green-500">
             <img id="template-art" class="w-full h-full p-0" alt="album art">
         </section>
@@ -105,7 +105,7 @@
             <p id="template-title" class="font-bold">Title</p>
             <p id="template-artist" class="italic text-stone-400">Artist</p>
         </section>
-    </div>
+    </button>
     <div hidden id="spinner" class="h-14 h-14 p-4 flex justify-around">
         <span class="loader"></span>
     </div>
